kustomizations/streaming/lidarr/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: lidarr
  labels:
    app: lidarr
    app.kubernetes.io/name: lidarr
    app.kubernetes.io/instance: streaming-stack
    app.kubernetes.io/part-of: streaming-stack
spec:
  selector:
    app: lidarr
    app.kubernetes.io/name: lidarr
    app.kubernetes.io/instance: streaming-stack
  ports:
  - name: http
    port: 8686
    targetPort: 8686
