kustomizations/streaming/lidarr/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: lidarr
spec:
  ingressClassName: cloudflare-tunnel
  rules:
  - host: lidarr.citocafecito.work
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: lidarr
              port:
                number: 8686
